--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -974,6 +974,7 @@ FRA_avoid_economical_crash:0 "§GIn case of global §REconomical Crash§!,§Y [R
 
  FRA_connection_with_paris:0 "Connection With Paris"
  FRA_ask_french_workers_help:0 "Ask French Workers Help"
+ FRA_ask_for_french_rifles:0 "Ask French Rifles"
 
  FRA_HBM_law:0 "HBM Law"
  FRA_HBM_law_desc:0 "This proposal supplements the Siegfried law of November 30, 1894 which created low-cost housing, entrusted to approved private companies, to which certain public establishments could grant loans, and the Strauss law of April 12, 1906, which encouraged municipalities and departments, by loans, transfer of land on advantageous conditions and other terms, to help the said companies.\n\n§YBonnevay§! Law instituate a real public social housing service by making it possible to create low-cost housing offices that could benefit from low-rate state loans."
