--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14591,3 +14591,35 @@ FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will 
  ww1_france.448.t:0 "[FROM.getName] Refused!"
  ww1_france.448.d:0 "The French government has refused to provide us the requested assistance."
  ww1_france.448.a:0 "Argh!"
+
+ ww1_france.449.t:0 "[FROM.getName] Ask for Investments"
+ ww1_france.449.d:0 "We received a message from the [FROM.getAdjective] autonomous government. [FROM.getNameDefCap] is requesting funds of [?random_funds|*1] francs to increase their military assignement, particularly to buy infantry equipment such as uniforms, rifles, grenades and machineguns. If we agree to propose such an agreement to the government, we would need the support of at least 200 deputies, so that we have a chance of passing the vote on this investment law."
+ ww1_france.449.a:0 "Sure, lets vote a new budget"
+ ww1_france.449.b:0 "We cant allow it..."
+
+ ww1_france.450.t:0 "[FROM.getName] Accepted!"
+ ww1_france.450.d:0 "The French government has agreed to provide us the requested assistance. The latter was passed by their parliament, granting us an immediate allocation of funds."
+ ww1_france.450.a:0 "Fantastic!"
+
+ ww1_france.451.t:0 "[FROM.getAdjective] Conquest Plan on Hainan"
+ ww1_france.451.d:0 "[IND.getLeader] came to Paris to present to us a bold plan aimed at expanding Indochinese territory, and potentially connecting the territory of Kouang-Tchéou-Wan to Tokin. This obviously includes sending an ultimatum to the [591.OWNER.getAdjective] government and preparing the army....\n\nHainan Island was initially a French war objective contested by the British. Now that we are allies, nothing can prevent the launch of an operation aimed at obtaining this territory already subject to strong French influence."
+ ww1_france.451.a:0 "Sure, we must prepare ourselves!"
+ ww1_france.451.b:0 "We cant risk our holdings there!"
+
+
+ ww1_france.452.t:0 "[FROM.getName] Validated the Plan on Hainan"
+ ww1_france.452.d:0 "Paris has accepted our proposal and will send an ultimatum to the [591.OWNER.getAdjective] government in the coming hours to demand the concession of this large territory with the aim of \"securing French trade routes\" and \"protecting local Christian populations\", a great classic."
+ ww1_france.452.a:0 "Nice!"
+
+ ww1_france.453.t:0 "[FROM.getAdjective] Reclamations"
+ ww1_france.453.d:0 "The French government contacted us to request a concession in our territory. France claims the island of Hainan, a vast region strongly influenced by Paris since the creation of Indochina in 1898. Their demands are supported by the aim of \"securing French trade routes\" and \"protecting local Christian populations\"..."
+ ww1_france.453.a:0 "Never!"
+ ww1_france.453.b:0 "We cant risk war with France..."
+
+ ww1_france.454.t:0 "[591.OWNER.getName] Refused!"
+ ww1_france.454.d:0 "China has refused to compromise on the Hainan issue, considering our demands to be light and unfounded. We are unfortunately forced to abandon the diplomatic route."
+ ww1_france.454.a:0 "Arrggh!"
+
+ ww1_france.455.t:0 "[591.OWNER.getName] Accepted!"
+ ww1_france.455.d:0 "The Chinese government did not support our pressure and announced that it would concede the island of Hainan to France in exchange for a non-aggression pact. The transfer will last 99 years, more time than we need to make it a profitable economic center."
+ ww1_france.455.a:0 "Fantastic!"
