--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10434,6 +10434,18 @@ VIN_appease_the_elites_desc:0 "The Indochinese government is faced with numerous
 VIN_expand_the_asian_fleet:0 "Expand the Asian Fleet"
 VIN_expand_the_asian_fleet_desc:0 "The situation in Asia does not allow our current forces to maintain sufficient pressure. The mainland must send us additional equipment to help with our defense on the high seas."
 
+VIN_reach_the_french_parliament:0 "Reach French Parliament"
+VIN_reach_the_french_parliament_desc:0 "The metropolis is able to provide us with additional one-off assistance if we request it. These potential investments will help stimulate our local economy."
+
+VIN_land_reform:0 "Land Reform"
+VIN_land_reform_desc:0 "The new local administration is able to assess the potential of certain agricultural regions, particularly in rural areas in the west of the country. Financing a major development investment will ensure great growth in Indochina."
+
+VIN_invest_in_Guangzhouwan:0 "Invest in Guangzhouwan"
+VIN_invest_in_Guangzhouwan_desc:0 "Kouang-Tchéou-Wan was conquered in 1898 following a Chinese concession and was to become a port competing with that of Hong Kong. Unfortunately, the necessary investments were never made, causing the region to decline. The port of Fort Bayard should be revitalized by the government."
+
+VIN_invasion_of_hainan:0 "Invasion of Hainan"
+VIN_invasion_of_hainan_desc:0 "Hainan Island was initially a French war objective contested by the British. Now that we are allies, nothing can prevent the launch of an operation aimed at obtaining this territory already subject to strong French influence."
+
 VIN_indochinese_nationalism:0 "Indochinese Nationalism"
 VIN_indochinese_nationalism_desc:0 "Although Indochina was initially a union of protectorates dependent on France, this total was gradually constituted in a concrete state, equipped with its own administration and economy. This state of affairs allows us to ask Paris for greater autonomy."
 
