--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10431,7 +10431,7 @@ POR_constitucao_de_amplo_comunidade_hispanica_desc:0
 POR_our_fair_share:0 "Our Fair Share"
 POR_our_fair_share_desc:0
 POR_military_envoy_to_germany:0 "Military Envoy to Germany"
-POR_military_envoy_to_germany_desc:0
+POR_military_envoy_to_germany_desc:0 "with the current state of our armed forces, it would be prudent to send some officers to the elite Prussian Staff College in Berlin, to learn from Europe's most powerful army.
 POR_interfaith_harmony_pact:0 "Interfaith Harmony Pact"
 POR_interfaith_harmony_pact_desc:0
 POR_the_moniz_scheme:0 "The Moniz Scheme"
