--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13282,6 +13282,8 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_fiume.6.c: "Just end them, damn it!"
 
  # Nejd
+ SAU_urbans_cracked: "The Urban Population will be Pacified"
+ SAU_tribes_pacified: "Tribes will be Pacified"
  ww1_nejd.1.t: "[FROM.GetName] demands subjugation!"
  ww1_nejd.1.d: "The Emirate of Nejd, led by Abdulaziz Al Saud, has put forth a bold demand for our annexation, asserting their role as the primary driving force behind the unification of the Arabian Peninsula."
  ww1_nejd.1.a: "Come and take it."
