--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6443,6 +6443,9 @@ ww1_USA.58.d:0 "Ford Motor, who has never had to deal with much competition in t
 ww1_USA.140.t:0 "The Gifts of American Capitilism"
 ww1_USA.140.d:0 "While the United States government is refusing the sale of military equipment to all nations, we may be able to get our hands on American weapons anyways. Several large private producers of military equipments have announced that they will be selling their equipment to several foreign countries, including ours. If we are running low on any equipment, we should purchase some equipment from these corporations."
 ww1_USA.140.a:0 "We'll keep it in mind"
+ww1_USA.141.t:0 "Johann Heinrich returns from Germany"
+ww1_USA.141.d:0 "German ambassador to the US, Johann Heinrich has returned after staying for a month in Germany during the escalating tensions. He has now returned."
+ww1_USA.141.a:0 "Well that's good."
 ww1_USA.58.a:0 "Capitalism breeds innovation!"
 ww1_USA.92.t:0 "State Delegates Throw Support Behind Clark"
 ww1_USA.92.d:0 "Seeing Clark as the best fit for the job, several state delegate leaders have began to endorse Clark, and promise their states votes in the upcoming convention. While the race seems completed locked in for Clark, supporters of Wilson still argue the primary is not over until it is over."
