harry doesnt care about whatever he says and he knows it, he just holds an ancentral grudge because of the time i called his old german tree boring. focus tree UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2409,7 +2409,9 @@ ww1_chile.64.a:0 "Very Well, Its Our Turn Now,Let's Get Working"
 ww1_chile.65.t:0 "They've Rejected Our Offer"
 ww1_chile.65.d:0 "Chile regrets to inform that several nations have declined our offer of saltpeter. Despite the critical importance of this resource for their war efforts, they have chosen alternative suppliers. This decision presents a significant setback for our economy, which heavily relies on saltpeter exports. However, we remain resilient and are committed to finding new markets and opportunities to ensure our economic stability. This rejection underscores the challenges we face but also motivates us to diversify and strengthen our economic foundations for the future."
 ww1_chile.65.a:0 "Well-."
-
+ww1_chile.66.t:0 "The Chilean Declaration Of Neutrality"
+ww1_chile.66.d:0 "In a decisive move amidst the escalating turmoil of the Great War, the Chilean government has formally declared its neutrality. President [CHL.GetLeader] emphasized the nation's commitment to peace and stability, opting to steer clear of the entanglements embroiling Europe. This declaration reflects Chile's strategic interest in safeguarding its economic and political sovereignty while maintaining amicable relations with all warring nations. The announcement has been met with widespread approval among Chileans, who hope this stance will shield their homeland from the ravages of conflict sweeping across the globe."
+ww1_chile.66.a:0 "We hope this wont intefeere with our Saltpeter business."
 
 
 
