--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2769,6 +2769,9 @@ CHL_economic_blow:0 "Economic Blow"
 CHL_economic_blow_desc:0 "The Naval Blockade Imposed on Germany has done its job."
 CHL_saltpeter_produce:0 "Chile Saltpeter Produce"
 CHL_saltpeter_produce_desc:0 "Yummy"
+CHL_industrial_education_idea:0 "Industrial Education"
+CHL_rising_strikes:0 "Rising Strikes"
+CHL_rising_strikes2:0 "Rising Strikes"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
