--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4948,7 +4948,6 @@
  has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§! present within the state"
  has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
  has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
- TUR_healing_the_sick_man_tt:0 "Has national spirit §YSick Man of Europe§!"
  TUR_mobilize_the_civilian_population_tt:0 "Modify §YSecond Constitutional Era§! by\n£boost_popularity_texticon  Daily Proto-Fascism Support: §G+0.05§!\n\n"
  TUR_safeguard_courts_from_military_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+3%§!\n£war_support_modifiericons_texticon  War Support: §R-7.00%§!\n\n"
  TUR_iase_nezareti_tt:0 "Removes the £decision_icon_small §YFeed the Army§! Balance of Power decision.\nThe £decision_icon_small §YFeed the People§! Balance of Power decision will be cheaper.\n"
@@ -4966,6 +4965,8 @@
  TUR_inner_party_cult_tt1:0 "Add §YCommittee of Union and Progress§! which grants:\n£drift_defence_texticon  Ideology drift defense: §G+5.0%§!\n"
  TUR_inner_party_cult_tt2:0 "Several §Yadvisors§! would be able to §Yhired§! outside of §YPolitical Advisor§! slots, modifying §YCommittee of Union of Progress§! in the process."
  TUR_unity_of_the_party_and_the_state_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+5%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+5.00%§!\n\n"
+ TUR_healing_the_sick_man_tt:0 "This focus will automatically be completed if we've achieved §Yvictory§! in the §YGreat War§!"
+ TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
