--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9488,11 +9488,11 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
 
  ww1_raj.25.t:0 "Mangarh Massacre"
  ww1_raj.25.d:0 "PLACEHOLDER"
- ww1_raj.25.a:0 ""
+ ww1_raj.25.a:0 "The beginning of a trend?"
 
- ww1_raj.26.t:0 ""
+ ww1_raj.26.t:0 "Barisal Conspiracy Case"
  ww1_raj.26.d:0 "PLACEHOLDER"
- ww1_raj.26.a:0 ""
+ ww1_raj.26.a:0 "Luckily they were stopped before any disaster."
 
  ww1_raj.27.t:0 "Assasination Attempt Against Viceroy Charles Hardinge"
  ww1_raj.27.d:0 "The Viceroy and the Vicerine were riding on an elephant, making their ceremonial entry into the capital of India, when 17-year-old Basanta Kumar Biswas, a revolutionary from the village of Nadia, threw a homemade bomb at the Viceroy. Although the umbrella-bearer was killed, the Vicerine and the elephant remained unscathed. Lord Hardinge, however, was injured by shrapnel over his back, legs and head, and the flesh on his shoulders was torn into strips. There was some difficulty in removing the Viceroy from the back of the elephant on which they were travelling, and our doctors are still uncertain regarding the Viceroy's fate."
@@ -9504,9 +9504,42 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.28.d:0 "PLACEHOLDER"
  ww1_raj.28.a:0 "It's time to close this dark chapter in the Raj's history."
 
- ww1_raj.29.t:0 ""
- ww1_raj.29.d:0 ""
- ww1_raj.29.a:0 ""
+ ww1_raj.29.t:0 "Kallumala Samaram"
+ ww1_raj.29.d:0 "PLACEHOLDER"
+ ww1_raj.29.a:0 "Progress comes at a cost."
+
+ ww1_raj.30.t:0 "Bijolia movement"
+ ww1_raj.30.d:0 "PLACEHOLDER"
+ ww1_raj.30.a:0 "Another peasant movement, huh."
+
+ ww1_raj.31.t:0 "Kamuthi Looting"
+ ww1_raj.31.d:0 "PLACEHOLDER"
+ ww1_raj.31.a:0 "The beginning of a trend."
+ 
+ ww1_raj.32.t:0 "Murder of Clement De La Haye"
+ ww1_raj.32.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown. Various motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
+ ww1_raj.32.a:0 "His wife certainly is cute, but that's no reason to murder him!"
+ 
+ ww1_raj.33.t:0 "Kisan Sabha"
+ ww1_raj.33.d:0 "The Kisan Sabha (farmers' association) was recently proclaimed in northern Assam. It is a protest movement involving many agricultural caste groups. It has its origins in the Uttar Pradesh Kisan Sabha, founded in Lucknow in 1918 by Gauri Shankar Mishra, Indra Narayan Dwivedi and Madan Mohan Malviya."
+ ww1_raj.33.a:0 "Another peasant movement, huh."
+
+ ww1_raj.34.t:0 "Akali Movement"
+ ww1_raj.34.d:0 "PLACEHOLDER"
+ ww1_raj.34.a:0 "How could you reform the words of god?"
+
+ ww1_raj.35.t:0 ""
+ ww1_raj.35.d:0 "PLACEHOLDER"
+ ww1_raj.35.a:0 ""
+
+ ww1_raj.36.t:0 "Buckingham and Carnatic Mills Strike"
+ ww1_raj.36.d:0 "PLACEHOLDER"
+ ww1_raj.36.a:0 "Adress their strifes."
+ ww1_raj.36.b:0 "Supress the Workers."
+
+ ww1_raj.37.t:0 ""
+ ww1_raj.37.d:0 "PLACEHOLDER"
+ ww1_raj.37.a:0 ""
   
  # PORTUGAL
  ww1_portugal.1.t:0 "Join the Entente"
