--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -447,9 +447,12 @@ BUL_order_guns_from_france:0 "Order Guns From France"
 BUL_buy_british_uniforms:0 "Buy British Uniforms"
 BUL_purchase_austrian_canons:0 "Purchase Austrian Canons"
 BUL_order_guns_from_germany:0 "Order Guns From Germany"
+BUL_order_planes_from_germany:0 "Order Planes From Germany"
 BUL_finance_local_brigades:0 "Finance Local Brigades"
 AUH_investment_in_BUL:0 "Investments in Bulgaria"
 AUH_investment_in_BUL_desc:0 "The level of dependence from Bulgaria toward [AUH.getName] is §R[?BUL_vassalisation]§! \n\n The higher the dependency, the more benefits Austria will receive. \n\n [BUL.getAdjective] MALUSES [BUL.getFlag] \n §R0-2§! -> Nothing \n §R3-6§! -> §R-15%§! £pol_power \n §R7-10§! -> §R-30%§! £pol_power §YAND§! §R-2§! £civ_factory£ \n \n\n [AUH.getAdjective] BONUSES [AUH.getFlag] \n §G0-2§! -> Nothing \n §G3-6§! -> §G+10%§! £pol_power \n §G7-10§! -> §G+20%§! £pol_power §YAND§! §G+2§! £civ_factory£ \n"
+
+FRA_french_intervention_in_china:0 "French Intervention in China"
 
 BUL_tighten_private_companies_control:0 "Tighten Private Companies Control"
 BUL_nationalize_foreign_industry:0 "Nationalize Foreign Industry"
