idea fix and localisation

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -955,7 +955,7 @@
  TUR_naval_blockade_instant_desc:0 "§RIf estimated enemies strength ratio of 50% or less compared to our navy, this idea will be removed§!"
  TUR_balkan_pact_initiative:0 "Initiative of the Balkan Entente"
  TUR_islamic_army:0 "Islamic Army"
- TUR_islamic_army_tt:0 "When at war with a §YMajor Power§!:\n£manpower_texticonWeekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
+ TUR_islamic_army_tt:0 "When §Yat war§! with a §YMajor Power§!:\n£manpower_texticonWeekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
  TUR_ottoman_staff:0 "Ottoman Staff"
  TUR_german_military_command:0 "German Military Command"
  TUR_gendarmerie:0 "Ottoman Gendarmerie"
@@ -1004,8 +1004,6 @@
  TUR_local_development:0 "Local Development"
  TUR_local_development_desc:0 "Through our decentralization policies, this state has started its own local development initiative."
  TUR_local_development_tt:0 "§RThis modifier will be removed if the state has a Civilian Factory or a Military Factory§!"
- TUR_ministry_of_food_tt:0 "When §Yat war§!:\n£out_of_supply_texticon  Non-Combat Out of Supply Penalties: §G-5.0%§!\n£stability_war_texticon  War Penalty Stability Modifier: §G+10.00%§!\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y+0.10%§!\n"
- TUR_army_popularity_tt:0 "When §Yat war§!:\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y-0.10%§!\n£manpower_texticon  Recruitable Population Factor: §G+5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support (Combat Casualties): §G+0.50%§!\n"
  TUR_frozen_foreign_assets:0 "Frozen Foreign Assets"
  TUR_frozen_foreign_assets_desc:0 "Foreign powers that hold a sway in our debt council is now engaging in war against us. Even as temporary, this is the perfect opportunity to freeze their assets and curtail their control on our economy for the time being."
  TUR_frozen_foreign_assets_instant_desc:0 "§RWill be removed if we're not at war with any country that we owe debt to§!"
@@ -1019,6 +1017,18 @@
  AUH_ottoman_debt_yes_opposite:0 "\n(§Y[AUH.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?AUH.opda_consumer_goods_opposite|.1%Y]"
  RUS_ottoman_debt_yes_opposite:0 "\n(§Y[RUS.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods_opposite|.1%Y]"
  USA_ottoman_debt_yes_opposite:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods_opposite|.1%Y]"
+ TUR_ministry_of_food:0 "Ministry of Food"
+ TUR_ministry_of_food_desc:0 "İaşe Nezareti, also known as the Ministry of Food, was established due to war time scarcity of commodities and resources. With this ministry, resources of our nation will be spent more efficiently."
+ TUR_ministry_of_food_tt:0 "When §Yat war§!:\n£out_of_supply_texticon  Non-Combat Out of Supply Penalties: §G-5.0%§!\n£stability_war_texticon  War Penalty Stability Modifier: §G+10.00%§!\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y+0.10%§!\n"
+ TUR_army_popularity:0 "Army Popularity"
+ TUR_army_popularity_desc:0 "The state of war has proven to be good for the popularity of the army. As the war continues, the army will continue to gain influence over the nation."
+ TUR_army_popularity_tt:0 "When §Yat war§!:\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y-0.10%§!\n£manpower_texticon  Recruitable Population Factor: §G+5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support (Combat Casualties): §G+0.50%§!\n"
+ TUR_politicized_merchant_class:0 "Politicized Merchant Class"
+ TUR_politicized_merchant_class_desc:0 "By linking the merchant class of our empire directly to the party based on their loyalty, we can manipulate their actions on our favor while getting a small cut out of the deal."
+ TUR_unified_business_language:0 "Unified Business Language"
+ TUR_unified_business_language_desc:0 "By making Turkish as the sole official language for conducting business, we can break language barriers within our empire and equally distributing trade goods and benefits."
+ TUR_war_tax:0 "War Tax"
+ TUR_war_tax_desc:0 "Using war as an excuse, heavy taxes were imposed on the population. Yet the unpopularity of these taxes makes us beg the question if it's worth to keep it for long."
  TUR_committee_of_union_and_progress:0 "Committee of Union and Progress"
  TUR_committee_of_union_and_progress_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
  TUR_committee_member:0 "Committee Member"
