germany army tree layout

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10589,6 +10589,33 @@ GER_african_agricultural_development_desc:0 ""
 GER_establishment_of_german_culture:0 "Establishment of German Culture"
 GER_establishment_of_german_culture_desc:0 ""
 
+GER_nineteentwelve_military_conferance:0 "1912 Military Conference"
+GER_nineteentwelve_military_conferance_desc:0 ""
+GER_propose_the_first_military_expansion_law:0 "Propose the First Military Expansion Law"
+GER_propose_the_first_military_expansion_law_desc:0 ""
+GER_fortify_russian_border:0 "Fortify the Russian Border"
+GER_fortify_russian_border_desc:0 ""
+GER_side_with_the_general_staff:0 "Side with the General Staff"
+GER_side_with_the_general_staff_desc:0 ""
+GER_wealth_tax_law:0 "Wealth Tax Law"
+GER_wealth_tax_law_desc:0 ""
+GER_tarrif_laws:0 "Tarrif Laws"
+GER_tarrif_laws_desc:0 ""
+GER_abandon_the_great_ostaufmarsch:0 "Abandon the Great Ostaufsmarsch"
+GER_abandon_the_great_ostaufmarsch_desc:0 ""
+GER_second_military_expansion_law:0 "Second Military Expansion Law"
+GER_second_military_expansion_law_desc:0 ""
+GER_side_with_the_war_ministry:0 "Side with the War Ministry"
+GER_side_with_the_war_ministry_desc:0 ""
+GER_qualitative_strength:0 "Qualitative Strength"
+GER_qualitative_strength_desc:0 ""
+GER_to_be_home_by_christmas:0 "To be Home by Christmas"
+GER_to_be_home_by_christmas_desc:0 ""
+GER_found_deutsche_luftstreitkrafte:0 "Found Deutsche Luftstreitkräfte"
+GER_found_deutsche_luftstreitkrafte_desc:0 ""
+GER_create_the_first_air_corps:0 "Create the first Air Corps"
+GER_create_the_first_air_corps_desc:0 ""
+
 GER_konservativer_sieg:0 "Konservativer Sieg"
 GER_konservativer_sieg_desc:0 ""
 GER_introduce_protectionist_tariffs:0 "Introduce Protectionist Tariffs"
