--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14625,3 +14625,25 @@ FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will 
  ww1_france.455.t:0 "[591.OWNER.getName] Accepted!"
  ww1_france.455.d:0 "The Chinese government did not support our pressure and announced that it would concede the island of Hainan to France in exchange for a non-aggression pact. The transfer will last 99 years, more time than we need to make it a profitable economic center."
  ww1_france.455.a:0 "Fantastic!"
+
+ ww1_france.456.t:0 "[591.OWNER.getAdjective] Victory!"
+ ww1_france.456.d:0 "We were unable to take control of Hainan Island. As the war continued, the general staff chose to end it so as not to further use up our resources. Shame now hangs over our government, and we are forced to pay reparations to the [591.OWNER.getAdjective] authorities."
+ ww1_france.456.a:0 "What a shame..."
+
+ ww1_france.457.t:0 "[FRA.getAdjective] Defeat!"
+ ww1_france.457.d:0 "We valiantly defended our territory against the imperialist views of France. The French government and its Indochina colony were forced to admit defeat and pay heavy reparations for an entire year."
+ ww1_france.457.a:0 "Victory!"
+
+ ww1_france.458.t:0 "[591.OWNER.getAdjective] Defeat!"
+ ww1_france.458.d:0 "Victory is complete! We crushed the Chinese army and forced them to sign a pact to cede Hainan Island. As reparation for their illegitimate resistance, we also claimed the territory of Chinchou, making it possible to connect all of Indochina in exchange for a non-aggression pact."
+ ww1_france.458.a:0 "Victory!"
+
+ ww1_france.459.t:0 "[FRA.getAdjective] Victory!"
+ ww1_france.459.d:0 "Despite our active struggle, we were unable to protect Hainan Island. In doing so, France and its colony of Indochina seized the area, threatening to further extend their influence over neighboring territories. As a result, [ROOT.getLeader] conceded the Chinchou region, a coastal path linking French acquisitions. In exchange, the French government promised to no longer continue its operations and signed a non-aggression pact with us."
+ ww1_france.459.a:0 "Arghh! Not again!"
+
+ ww1_france.460.t:0 "[FRA.getAdjective]-[591.OWNER.getAdjective] War"
+ ww1_france.460.d:0 "France revealed its plans in China, beginning a special military operation aimed at conquering the island of Hainan. Officially, the French war objective is "securing French trade routes" and "protecting local Christian populations", claiming that the Chinese government has adopted anti-Western positions in the region.\n\nThese allegations do not fail to echo the Boxer Rebellion which had a strong impact on European mentalities. Whatever the case, none of these reasons will conceal the French imperialism which motivated this intervention."
+ ww1_france.460.a:0 "French Imperialism Strike again..."
+ ww1_france.460.b:0 "How Dare they ?!"
+ ww1_france.460.c:0 "Hainan will be ours !"
