--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -174,6 +174,11 @@ HISTORICAL_DESC:0 "Historical Ai Behavior."
 FRENCH_EARLY_DEFEAT:0 "French Defeat"
 FRENCH_EARLY_DEFEAT_DESC:0 "French and German Ais will act differently, favoring German victory on western front."
 
+IND_invasion_of_hainan:0 "@IND Invasion of Hainan"
+HISTORICAL_NO:0 "No (Historical)"
+INVASION_OF_HAINAN:0 "Invasion of Hainan"
+INVASION_OF_HAINAN_DESC:0 "French Governement will pressure China to annex Hainan Island."
+
 #AI BEHAVIOR
  RULE_OPTION_PROTO_FASCIST:0 "Proto-Fascist"
  RULE_OPTION_JUNTA:0 "Military Junta"
