--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -454,6 +454,9 @@ AUH_investment_in_BUL_desc:0 "The level of dependence from Bulgaria toward [AUH.
 
 FRA_french_intervention_in_china:0 "French Intervention in China"
 FRA_leave_CHI:0 "French Intervention Timer"
+FRA_war_on_hainan_flag:0 "Is Planning to Invade Hainan"
+FRA_start_intervention_in_china:0 "Start Intervention in China"
+FRA_target_of_france:0 "Original Owner of Hainan"
 
 BUL_tighten_private_companies_control:0 "Tighten Private Companies Control"
 BUL_nationalize_foreign_industry:0 "Nationalize Foreign Industry"
@@ -867,6 +870,14 @@ FRA_saint_erasme_battery_decomission_done:0 "Saint-Erasme Battery Decomission Vo
 FRA_exceptional_credit_to_minister_of_war:0 "Exceptional Credit to Minister of War"
 FRA_exceptional_credit_to_minister_of_war_desc:0 "A credit of 5,986,675 francs was requested by the Ministry of War in order to reduce the working hours of war industrial establishments. A large part of the allocated funds will be dedicated to paying additional salaries linked to the opening of new positions.\n\nPart of these funds will also be used to finance maintenance and certain war industries, including artillery production, marksmanship training and aeronics."
 FRA_exceptional_credit_to_minister_of_war_passed:0 "Exceptional Credit to Minister of War Vote Passed"
+
+FRA_law_on_war_damages:0 "Law on War Damages"
+FRA_law_on_war_damages_desc:0 "The law on compensation for damage caused by the events of war, known as the “Charter for victims”, is currently being voted on in parliament. Due to the scale of the devastation caused by the Great War, a commission will analyze the amount of damage suffered by France. Its objective is to establish a legal framework allowing repairs to be carried out or compensation to be awarded."
+FRA_law_on_war_damages_done:0 "Law on War Damages Pased"
+
+FRA_8_hours_worktime:0 "8 Hours Worktime Law"
+FRA_8_hours_worktime_desc:0 "The law proposed by the government of §Y[FRA.GetLeader]§! proposes setting legal working time at 8 hours per day for a total of 48 hours per week. Until then, daily working hours could reach 14 hours in certain sectors."
+FRA_8_hours_worktime_passed:0 "8 Hours Worktime Law Passed"
 
 FRA_investments_in_indochina:0 "Investements in [IND.getFlag]Indochina"
 FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
