--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14646,4 +14646,22 @@ FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will 
  ww1_france.460.d:0 "France revealed its plans in China, beginning a special military operation aimed at conquering the island of Hainan. Officially, the French war objective is "securing French trade routes" and "protecting local Christian populations", claiming that the Chinese government has adopted anti-Western positions in the region.\n\nThese allegations do not fail to echo the Boxer Rebellion which had a strong impact on European mentalities. Whatever the case, none of these reasons will conceal the French imperialism which motivated this intervention."
  ww1_france.460.a:0 "French Imperialism Strike again..."
  ww1_france.460.b:0 "How Dare they ?!"
- ww1_france.460.c:0 "Hainan will be ours !"
+ ww1_france.460.c:0 "Hainan will be ours!"
+
+ ww1_france.461.t:0 "Assassination Attempt Against Georges Clemeanceau!"
+ ww1_france.461.d:0 "This morning at 8:30 a.m., council president Clemeanceau was the victim of an attack in front of his home, rue Franklin. The revolutionary anarchist Emile Cottin was waiting for him, armed with a revolver. The terrorist fired nine times at the president's car, hitting him 3 times, notably in the shoulder blade. Fortunately, Clemeanceau survived this attack and Cottin was sentenced to 10 years in prison."
+ ww1_france.461.a:0 "Piouf..."
+
+ ww1_france.462.t:0 "Union populaire républicaine d'Alsace"
+ ww1_france.462.d:0 "Created this week, the UPR, also called "Republican Popular Union" is an Alsatian Christian-democratic movement. Supporting autonomist groups and Alsatian, sometimes Lorraine, nationalism, it constitutes a new thorn in the side of French Democracy. We must fight this movement at all costs to avoid a cultural gap justifying an independent republic."
+ ww1_france.462.a:0 "They will remain French!"
+
+ ww1_france.463.t:0 "Riots for the 8 Hours Day"
+ ww1_france.463.d:0 "In several large cities in France such as Nantes, Amiens, Paris, Marseille and Toulouse, trade union organizations linked to the CGT organized large popular rallies. The general demand concerns the reduction of working hours to 8 hours, against 14 currently. In Europe, France is one of the countries with the highest legal working hours. Some processions contained armed radicalized elements, causing unrest in some city centers."
+ ww1_france.463.a:0 "We will propose this law in the parliament"
+FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to address this issue.§!"
+
+
+ ww1_france.464.t:0 "1st May Bloody Riots"
+ ww1_france.464.d:0 "May Day is always a busy day of union demonstrations. Those of this year are particularly violent. Many companies refuse to apply the reduction of working hours to 8 hours per day, facing pressure from the CGT and workers' groups. Thus, riots broke out in Paris, causing the death of at least one far-left demonstration."
+ ww1_france.464.a:0 "What can we do about it?!"
