--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14665,3 +14665,20 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
  ww1_france.464.t:0 "1st May Bloody Riots"
  ww1_france.464.d:0 "May Day is always a busy day of union demonstrations. Those of this year are particularly violent. Many companies refuse to apply the reduction of working hours to 8 hours per day, facing pressure from the CGT and workers' groups. Thus, riots broke out in Paris, causing the death of at least one far-left demonstration."
  ww1_france.464.a:0 "What can we do about it?!"
+
+ ww1_france.465.t:0 "June Strikes"
+ ww1_france.465.d:0 "Due to the return of demobilized soldiers to civilian life, the comage increased tenfold. This situation caused a fall in wages, as supply exceeded demand, causing general impoverishment. Worse, minimum wages have remained frozen since 1914, causing a terrible gap between official income and the cost of living.\n\nThe tension thus generated has exploded since the beginning of the year and seems to have reached its peak. Nearly 350,000 strikers declared themselves throughout France, mainly metalworkers and transport employees."
+ ww1_france.465.a:0 "Ask the UIMM and the UEII to negociate with the CGT!"
+
+
+ ww1_france.466.t:0 "June Strikes - Part 2"
+ ww1_france.466.d:0 "Negotiations between employers and unions produce nothing, several blocking points remain for the conclusion of an agreement, in particular the question of male-female wages. In addition, far-left criminal agitators have appeared, such as Pierre Monatte who is trying to convince the popular masses to rise up and overthrow France!"
+ ww1_france.466.a:0 "Let's make large concessions to the metallurgists to break the strike"
+
+ ww1_france.467.t:0 "June Strikes - Part 3"
+ ww1_france.467.d:0 "The government issued numerous concessions to the metallurgical industries, which had the effect of greatly reducing the number of strikers. Nearly half of the demonstrations have disappeared, announcing the end of the crisis. For its part, the CGT and the UIMM managed to find a salary agreement during their understanding committee. Although many strikers refused him, he also participated in the de-escalation."
+ ww1_france.467.a:0 "Finaly."
+
+ ww1_france.468.t:0 "Strikes for Cheaper Housing"
+ ww1_france.468.d:0 "On the sidelines of the union demonstrations, other demands arose relating to city housing policy. Due to the rise in prices, many accommodations have become unaffordable for Parisians, Lyons and Bordeaux residents. The demonstration brought together nearly 100,000 people in Paris under the banner of the Confederal Union of Tenants."
+ ww1_france.468.a:0 "Again?!"
